fix map + ar view button, still overlap with menu button

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -22,6 +22,16 @@ $font-family-base:                $font-family-milo !default;
 $dark:                            #6798AC;
 $bar-dark-border:                 $dark;  
 
+.buttons.right-buttons span {
+	display: -webkit-inline-flex;
+	display: -ms-inline-flexbox;
+	display: inline-flex;
+	overflow: hidden;
+	padding-right: 0;
+	margin-right: 0;
+}
+// .clearbothFix {clear:both;}
+.item-input-wrapper {max-width:45%}
 
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
